--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,7 +14,7 @@
                                 <input class="form-control" type="password" name="password" placeholder="Password">
                               </div>
                                 <div class="form-group">
-                                    <button class="btn btn-block btn-primary">Submit</button>
+                                    <button class="btn btn-block btn-primary">Login</button>
                                 </div>
                               </form>
                               <a class="btn btn-block btn-warning" href="/campgrounds"> Back to Campgrounds</a>
